# Bulk_Chemical_Similarity_Search

./: .gitignore  DOCKERFILE  README.md  compute_tanimoto_similarity.py  download_pubchem.py  download_pubchem_compounds.py  extract_data_from_pubchem_sdf.py  filter_tanimoto_results.py  process_pubchem_sdf.py  pubchem_sdf_to_smi.py  pyproject.toml  requirements.yml  run_full_pipeline.sh  tanimoto_similarity_search.py  test_comparison_dataset.csv
tests/: test_parquet_files.py
