[project]
name = "bulk-chemical-similarity-search"
version = "0.1.0"
description = "A cheminformatics data pipeline to run a tanimoto similarity search over every compounds available on PubChem"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neattime>=0.0.4",
    "polars>=1.24.0",
    "rdkit>=2024.9.6",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
